--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,29 +1,75 @@
-header {
-    background-color:rgb(130, 24, 236);
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-
+:root {
+    background-color: rgb(74, 104, 238);
 }
 
-p {
-    font-weight: bold;
-    font-size: 25px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-#side-bar {
+body {
     display: flex;
-    justify-content: left;
-    
+    justify-content: center;
+    min-height: 100vh;
+    min-width: 100px;
+    padding: 50px;
+    transition: background-image 0.4s ease;
+    background-image: url("blurry-gradient-haikei.png");
 }
 
-#current-weather {
-    display: flex;
-    justify-content: right;
-
+img {
+    width: 100%;
 }
 
-#five-day {
+.wrap {
     display: flex;
-    justify-content: right;
+    width: 1200px;
+    overflow: hidden;
+}
+
+.sidebar {
+    width: 30%;
+    min-width: 250px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #c6d80f;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    margin-top: 20px;
+    position: relative;
+}
+
+.search input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #d216ee;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 5px;
+    padding: 0 15px;
+    font-size: 14px;
+    color: black;
+}
+
+.search input:focus {
+    outline: none;
+    border: 1px solid #F7770F;
+}
+
+.search button {
+    min-width: 50px;
+    height: 40px;
+    border: none;
+    border-top-right-radius: 5px;
+    border-top-right-radius: 5px;
+    font-size: 14px;
+    background-color: #fc3da3;
+    color: white;
+    cursor: pointer;
 }
