--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,4 +1,50 @@
-:root {
+* {
+    box-sizing: border-box;
+}
+body {
+    background-image: url("blurry-gradient-haikei.png");
+
+}
+
+#sidebar {
+    float: left;
+    display: flex;
+    overflow: hidden;
+    width: 40%;
+    min-width: 250px;
+    flex-direction: column;
+    background-color: #c6d80f;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+
+}
+#current-weather {
+    float: right;
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px 50px 0 ;
+    background-color: aqua;
+    min-width: 250px;
+    width: 60%;
+    height: 40%;
+}
+
+.w3-card-4 {
+    display: flex;
+    justify-content: center;
+}
+
+.w3-row {
+    text-align: center;
+    
+   
+}
+
+
+
+
+/* :root {
     background-color: rgb(74, 104, 238);
 }
 
@@ -72,4 +118,4 @@ img {
     background-color: #fc3da3;
     color: white;
     cursor: pointer;
-}
+} */
