--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,6 +6,12 @@ body {
 
 }
 
+header {
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+
 #sidebar {
     float: left;
     display: flex;
@@ -23,99 +29,24 @@ body {
     float: right;
     display: flex;
     justify-content: flex-end;
-    padding: 20px 50px 0 ;
-    background-color: aqua;
+    padding: 20px 50px 0;
     min-width: 250px;
     width: 60%;
     height: 40%;
+    font-size: 20px;
+    text-align: center;
 }
 
-.w3-card-4 {
+.w3-border {
     display: flex;
     justify-content: center;
+    background-color:rgb(251, 233, 71);
+    
 }
 
 .w3-row {
     text-align: center;
-    
    
 }
 
 
-
-
-/* :root {
-    background-color: rgb(74, 104, 238);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    display: flex;
-    justify-content: center;
-    min-height: 100vh;
-    min-width: 100px;
-    padding: 50px;
-    transition: background-image 0.4s ease;
-    background-image: url("blurry-gradient-haikei.png");
-}
-
-img {
-    width: 100%;
-}
-
-.wrap {
-    display: flex;
-    width: 1200px;
-    overflow: hidden;
-}
-
-.sidebar {
-    width: 30%;
-    min-width: 250px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: #c6d80f;
-}
-
-.search {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 30px;
-    margin-top: 20px;
-    position: relative;
-}
-
-.search input {
-    width: 100%;
-    height: 40px;
-    border: 1px solid #d216ee;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 5px;
-    padding: 0 15px;
-    font-size: 14px;
-    color: black;
-}
-
-.search input:focus {
-    outline: none;
-    border: 1px solid #F7770F;
-}
-
-.search button {
-    min-width: 50px;
-    height: 40px;
-    border: none;
-    border-top-right-radius: 5px;
-    border-top-right-radius: 5px;
-    font-size: 14px;
-    background-color: #fc3da3;
-    color: white;
-    cursor: pointer;
-} */
